[ext] fix search suggestions displayed below tournesol container (#2123)
* [ext] fix search suggestions displayed below tournesol container, alternative fix for truncated container

* bump version

--- a/browser-extension/src/addTournesolRecommendations.css
+++ b/browser-extension/src/addTournesolRecommendations.css
@@ -26,7 +26,15 @@
     var(--ytd-rich-grid-items-per-row) *
       (var(--ytd-rich-grid-item-max-width) + var(--ytd-rich-grid-item-margin))
   );
-  z-index: 2020;
+}
+
+#header[hidden]+#tournesol_container {
+  /*
+  When YT history is disabled (and categories "header" is hidden),
+  in some cases (e.g when going back to the homepage from a watch page)
+  the container would be truncated without this extra margin.
+  */
+  margin-top: 56px;
 }
 
 /**
